Fixes spacing and links on usage rights column
Makes it so that the columns properly align as well as adds links to open
the usage rights dialog when the usage rights indicators are clicked

fixes CNVS-17261
fixes CNVS-17211
fixes CNVS-17265

Test Plan:
  - Enable Usage Rights
  - Go to new files
  - The usage rights icon columns should all be aligned
    even when you sort the column.
  - Click on the warning icon or on the icon of a file
    with usage rights.
  - The usage rights modal should open.

Reviewed-on: https://gerrit.instructure.com/45340
Product-Review: Cosme Salazar <cosme@instructure.com>
QA-Review: Anna Koalenz <akoalenz@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/pages/react_files/_UsageRightsIndicator.scss
+++ b/app/stylesheets/pages/react_files/_UsageRightsIndicator.scss
@@ -1,3 +1,8 @@
-.UsageRightsIndicator_warning {
+.UsageRightsIndicator__warning {
   color: $canvas-alert;
+}
+
+.UsageRightsIndicator__openModal {
+  cursor: pointer;
+  color: $canvas-dark;
 }
